style: fill base layout content

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -17,6 +17,12 @@
 body > #root {
   height: 100vh;
 }
+body > #root > .App {
+  height: 100vh !important;
+}
+body > #root > .App > div {
+  height: 100%;
+}
 
 * {
   font-family: 'NanumGothic';
