--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -26,7 +26,7 @@ body > #root > .App > div {
 
 * {
   font-family: 'NanumGothic';
-  font-weight: bold;
+  /* font-weight: bold; */
   padding: 0;
   margin: 0;
   border: 0;
